--- a/vagrant-kafka/Vagrantfile
+++ b/vagrant-kafka/Vagrantfile
@@ -1,23 +1,15 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 ENV['VAGRANT_SERVER_URL'] = 'http://vagrant.elab.pro'
-Vagrant.configure(2) do |config|
-
-  (1..3).each do |i|
-    config.vm.define "kafka#{i}" do |node|
-      node.vm.box               = "debian/bullseye64"
-      node.vm.hostname          = "kafka"
-
-      #node.vm.network "public_network"
-      node.vm.network "public_network", ip: "192.168.1.151", bridge: "Realtek PCIe GbE Family Controller"
-    
-      node.vm.provision "shell", path: "kafka.sh"
-      node.vm.provider :virtualbox do |v|
-        v.gui = true
-        v.name    = "kafka"
-        v.memory  = 2048
-        v.cpus    = 1
-      end
-    end
+Vagrant.configure("2") do |config|
+  config.vm.box = "debian/bullseye64"
+  config.vm.box_check_update = false
+  config.vm.hostname = "kafka"
+  config.vm.provision "shell", path: "kafka.sh"
+  config.vm.network "public_network", ip: "192.168.1.151", bridge: "Realtek PCIe GbE Family Controller"
+  config.vm.provider "virtualbox" do |v|
+    v.gui = true
+    v.memory = 2048
+    v.cpus = 1  
   end
 end
